--- a/styles/custom/_site_styles.scss
+++ b/styles/custom/_site_styles.scss
@@ -1127,6 +1127,9 @@ select {
       background-image: none;
     }
   }
+  &.page-rip--help {
+    padding-top: 40px;
+  }
 }
 %clean-hero, .clean-hero {
   position: relative;
