--- a/styles/custom/_zendesk_overrides.scss
+++ b/styles/custom/_zendesk_overrides.scss
@@ -140,6 +140,7 @@ ol ol, ol ul, ul ol, ul ul {
 }
 
 .button, [role="button"] {
+  width: unset;
   &:after {
     color: $white;
   }
